# fileshare

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
config/: logging_utils.py  middleware.py  settings.py  test_settings.py  urls.py
files/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
files/management/commands/: create_minio_bucket.py
files/migrations/: 0001_initial.py  0002_file_is_shared_sharedaccess.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py
