[project]
name = "fileshare"
version = "0.1.0"
description = ""
authors = [
    {name = "null-route-dev",email = "null-route-dev@protonmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [{include = "config"}]